improving diversification rate tutorials

--- a/tutorial_TeX/RB_DiversificationRate_BranchSpecific_Tutorial/RB_DiversificationRate_BranchSpecific_Tutorial_content.tex
+++ b/tutorial_TeX/RB_DiversificationRate_BranchSpecific_Tutorial/RB_DiversificationRate_BranchSpecific_Tutorial_content.tex
@@ -101,7 +101,7 @@ taxa <- T.taxa()
 Additionally, we can initialize an iterator variable for our vector of moves:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-mi = 0
+mvi = 0
 \end{lstlisting}
 \end{snugshade*}}
 
