WH updates to unconstrained CTMC

--- a/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content_unconstrained.tex
+++ b/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content_unconstrained.tex
@@ -106,7 +106,7 @@ You will be able to complete the exercises without delving too deeply into the u
 \noindent \\ \impmark It is important to note that you can run all of the \Rev~commands from a \RevBayes~script file using the \cl{source()} function in the \RevBayes~console. If you create a file called \cl{JukesCantor.Rev} and save all of the commands listed below in this file, run the analysis by calling this function:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-source("JukesCantor.Rev")
+source("scripts/JukesCantor.nonclock.Rev")
 \end{lstlisting}
 \end{snugshade*}}
 
