fix filename in tex

--- a/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content_unconstrained.tex
+++ b/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content_unconstrained.tex
@@ -103,7 +103,7 @@ Here we only provide some of the equations for the models in case you might be i
 You will be able to complete the exercises without delving too deeply into the underlying math.
 
 \newpage
-\noindent \\ \impmark It is important to note that you can run all of the \Rev~commands from a \RevBayes~script file using the \cl{source()} function in the \RevBayes~console. If you create a file called \cl{JukesCantor.Rev} and save all of the commands listed below in this file, run the analysis by calling this function:
+\noindent \\ \impmark It is important to note that you can run all of the \Rev~commands from a \RevBayes~script file using the \cl{source()} function in the \RevBayes~console. If you create a file called \cl{JukesCantor.nonclock.Rev} and save all of the commands listed below in this file, run the analysis by calling this function:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 source("scripts/JukesCantor.nonclock.Rev")
