fixed typo in Getting_Started tutorial

--- a/tutorial_TeX/RB_Getting_Started/RB_Getting_Started_content.tex
+++ b/tutorial_TeX/RB_Getting_Started/RB_Getting_Started_content.tex
@@ -176,7 +176,7 @@ mean_2 <- 2.0
 sd_1 <- 1.0
 sd_2 <- 1.0
 weight <- 0.5
-M ~ dnBimodalLnorm(mean_1, mean_2, sd_1, sd_2, weight)
+M ~ dnBimodalLognormal(mean_1, mean_2, sd_1, sd_2, weight)
 \end{lstlisting}
 \end{snugshade*}}
 
