--- a/tutorial_TeX/RB_Getting_Started/RB_Getting_Started_content.tex
+++ b/tutorial_TeX/RB_Getting_Started/RB_Getting_Started_content.tex
@@ -183,7 +183,7 @@ M ~ dnBimodalLognormal(mean_1, mean_2, sd_1, sd_2, weight)
 \Rev~does allow you to specify constant-variable values in the distribution constructor function, therefore this also works:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-M ~ dnBimodalLnorm(0.5, 2.0, 1.0, 1.0, 0.5)
+M ~ dnBimodalLognormal(0.5, 2.0, 1.0, 1.0, 0.5)
 \end{lstlisting}
 \end{snugshade*}}
 Both ways to specify priors are equivalent.
