--- a/tutorial_TeX/RB_DiversificationRate_Sampling_Tutorial/RB_DiversificationRate_Sampling_Tutorial.tex
+++ b/tutorial_TeX/RB_DiversificationRate_Sampling_Tutorial/RB_DiversificationRate_Sampling_Tutorial.tex
@@ -5,13 +5,13 @@
 \renewcommand{\headrulewidth}{0.5pt}
 \headsep = 20pt
 \lhead{ }
-\rhead{\textsc {\RevBayes~Tutorial --- Episodic Diversification Rate Estimation}}
+\rhead{\textsc {\RevBayes~Tutorial --- Diversification Rate Estimation with Missing Taxa}}
 
 \thispagestyle{plain}
 \begin{center}
 
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
-\textbf{\it{\Large Episodic Diversification Rate Estimation}}\\\vspace{2mm}
+\textbf{\it{\Large Diversification Rate Estimation with Missing Taxa}}\\\vspace{2mm}
 \vspace{1cm}
 {\Large Sebastian H{\"o}hna}
 \vspace{1cm}
@@ -20,7 +20,7 @@
 \def \ResourcePath {./}
 \def \GlobalResourcePath {../}
 \input{../RB_DiversificationRateIntro_Tutorial/RB_DiversificationRateIntro_Tutorial_content_no_bib}
-\input{RB_DiversificationRate_Episodic_Tutorial_content}
+\input{RB_DiversificationRate_Sampling_Tutorial_content}
 
 Version dated: \today
 
